# pathscale.com-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cf  README.md  check.sh  entrypoint.cf.sh  entrypoint.sh  fly.toml
.github/workflows/: debian.yml  docker-cf.yml  docker.yml
cf-deploy/: README.md  package-lock.json  package.json  wrangler.toml
cf-deploy/src/: index.ts
config/: enums.ron  structs.ron  version.toml
config/schema_lists/: 00_schema_template.ron.template  01_auth.ron  02_admin.ron  03_support.ron  04_waitlist.ron
docs/: README.md  services.json
etc/: config.deploy.toml  config.dev.toml
etc/systemd/: pathscale_be.service
examples/: ws_echo_honey.rs
scripts/debian/: postinst.sh
scripts/util/: bump-tag.sh  regenerate_endpoints.sh
src/: app.rs  cli.rs  codegen.rs  config.rs  handlers.rs  main.rs  service.rs  util.rs
src/app/: admin_handlers.rs  auth_handlers.rs  support_handlers.rs  waitlist_handlers.rs
src/codegen/: model.rs
src/db/: database.rs  schema.rs
src/db/schema/: support.rs  tg_bot_config.rs  user.rs  waitlist.rs
src/handlers/: admin.rs  support.rs  utils.rs  waitlist.rs
src/handlers/admin/: add_supports.rs  get_tg_bot_config.rs  list_supports.rs  list_users.rs  remove_supports.rs  set_role.rs  set_tg_bot_config.rs
src/handlers/support/: list_msgs.rs  send_msg.rs  sub_msg_events.rs
src/handlers/utils/: receiver.rs  routing_message.rs  subscription_router.rs
src/handlers/waitlist/: add_lead.rs  list_leads.rs
src/service/: support_chat.rs  tg_bot_service.rs
src/util/: pipeline.rs
(+4 files in other folders)
