[package]
name = "pathscale_be"
version = "0.1.0"
edition = "2024"

[dependencies]
endpoint-libs = { version = "1.3.4", features = ["ws"] }
honey_id-types = "1.4"
worktable = "0.8.23"
tokio = { version = "1.50.0", features = ["full", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28.0", features = [
  "rustls-tls-webpki-roots",
] }
eyre = "0.6.12"
uuid = "1.21.0"
async-trait = "0.1.89"
strum = "0.28"
strum_macros = "0.28"
num-derive = "0.4.2"
num-traits = "0.2.19"
rkyv = "0.8.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.60", features = ["derive", "env"] }
tracing = "0.1.44"
tgbot = "0.43.0"
rustls = { version = "0.23.37", features = ["ring"] }
smart-default = "0.7.1"
futures = "0.3.32"
derive_more = { version = "2.1.1", features = ["full"] }
chrono = "0.4.44"
config = "0.15.19"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
once_cell = "1.21.3"
url = "2"
